Backporting MDEV-28963 from 10.7 to 10.6

MDEV-28963 Incompatible data type assignment through SP vars is not consistent with columns